[gd_scene load_steps=13 format=2]

[ext_resource path="res://online/Lobby.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/libertinus/LibertinusSerif-Semibold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/libertinus/LibertinusSans-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://online/RulesContainer.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 47
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 51
font_data = ExtResource( 3 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.0627451, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_right = 594.0
margin_bottom = 252.0
columns = 3

[node name="Label1" type="Label" parent="VBoxContainer/GridContainer"]
margin_right = 466.0
margin_bottom = 60.0
rect_min_size = Vector2( 400, 60 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Empty slot"
align = 2
valign = 1

[node name="CheckBox1" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_left = 470.0
margin_right = 530.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
align = 1

[node name="ColorRect1" type="ColorRect" parent="VBoxContainer/GridContainer"]
margin_left = 534.0
margin_right = 594.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
color = Color( 0.956863, 0.760784, 0.0901961, 1 )

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 64.0
margin_right = 466.0
margin_bottom = 124.0
rect_min_size = Vector2( 400, 60 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Empty slot"
align = 2
valign = 1

[node name="CheckBox2" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_left = 470.0
margin_top = 64.0
margin_right = 530.0
margin_bottom = 124.0
rect_min_size = Vector2( 60, 60 )
align = 1

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/GridContainer"]
margin_left = 534.0
margin_top = 64.0
margin_right = 594.0
margin_bottom = 124.0
rect_min_size = Vector2( 60, 60 )
color = Color( 0.8, 0.129412, 0.129412, 1 )

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 128.0
margin_right = 466.0
margin_bottom = 188.0
rect_min_size = Vector2( 400, 60 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Empty slot"
align = 2
valign = 1

[node name="CheckBox3" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_left = 470.0
margin_top = 128.0
margin_right = 530.0
margin_bottom = 188.0
rect_min_size = Vector2( 60, 60 )
align = 1

[node name="ColorRect3" type="ColorRect" parent="VBoxContainer/GridContainer"]
margin_left = 534.0
margin_top = 128.0
margin_right = 594.0
margin_bottom = 188.0
rect_min_size = Vector2( 60, 60 )
color = Color( 0.141176, 0.847059, 0.317647, 1 )

[node name="Label4" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 192.0
margin_right = 466.0
margin_bottom = 252.0
rect_min_size = Vector2( 400, 60 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Empty slot"
align = 2
valign = 1

[node name="CheckBox4" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_left = 470.0
margin_top = 192.0
margin_right = 530.0
margin_bottom = 252.0
rect_min_size = Vector2( 60, 60 )
align = 1

[node name="ColorRect4" type="ColorRect" parent="VBoxContainer/GridContainer"]
margin_left = 534.0
margin_top = 192.0
margin_right = 594.0
margin_bottom = 252.0
rect_min_size = Vector2( 60, 60 )
color = Color( 0.0666667, 0.14902, 0.819608, 1 )

[node name="LobbyState" type="Label" parent="VBoxContainer"]
margin_top = 256.0
margin_right = 594.0
margin_bottom = 297.0
custom_fonts/font = SubResource( 3 )
text = "Waiting for players"
align = 1

[node name="Button" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 301.0
margin_right = 594.0
margin_bottom = 361.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Waiting for players"

[node name="ReadyButton" type="Button" parent="VBoxContainer"]
margin_top = 301.0
margin_right = 594.0
margin_bottom = 362.0
custom_fonts/font = SubResource( 4 )
disabled = true
toggle_mode = true
text = "Choose position->v"

[node name="RulesContainer" type="VBoxContainer" parent="."]
anchor_left = 0.55
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="RulesContainer"]
margin_right = 891.0
margin_bottom = 203.0
custom_constants/vseparation = 7
columns = 2

[node name="WinCount" type="Label" parent="RulesContainer/GridContainer"]
margin_right = 200.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 5 )
text = "Number of wins"
valign = 1

[node name="WinBox" type="SpinBox" parent="RulesContainer/GridContainer"]
margin_left = 204.0
margin_right = 278.0
margin_bottom = 35.0
min_value = 1.0
value = 3.0
rounded = true
allow_greater = true
editable = false

[node name="StartHp" type="Label" parent="RulesContainer/GridContainer"]
margin_top = 42.0
margin_right = 200.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 5 )
text = "Starting hp"
valign = 1

[node name="StartHpBox" type="SpinBox" parent="RulesContainer/GridContainer"]
margin_left = 204.0
margin_top = 42.0
margin_right = 278.0
margin_bottom = 77.0
min_value = 1.0
value = 15.0
rounded = true
allow_greater = true
editable = false

[node name="AddAI" type="Label" parent="RulesContainer/GridContainer"]
margin_top = 84.0
margin_right = 200.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 5 )
text = "Enable ai"
valign = 1

[node name="EnableAi" type="CheckBox" parent="RulesContainer/GridContainer"]
margin_left = 204.0
margin_top = 84.0
margin_right = 278.0
margin_bottom = 119.0
disabled = true
pressed = true

[node name="PlayerPowers" type="Label" parent="RulesContainer/GridContainer"]
margin_top = 126.0
margin_right = 200.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 5 )
text = "Player powers:"
valign = 1

[node name="PlayerPowersFiller" type="Label" parent="RulesContainer/GridContainer"]
margin_left = 204.0
margin_top = 126.0
margin_right = 278.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 5 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForcePush" type="Label" parent="RulesContainer/GridContainer"]
margin_top = 168.0
margin_right = 200.0
margin_bottom = 203.0
custom_fonts/font = SubResource( 5 )
text = "Force push"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForceBox" type="CheckBox" parent="RulesContainer/GridContainer"]
margin_left = 204.0
margin_top = 168.0
margin_right = 278.0
margin_bottom = 203.0
disabled = true
pressed = true

[node name="ForceMagnet" type="Label" parent="RulesContainer/GridContainer"]
visible = false
margin_top = 210.0
margin_right = 206.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 5 )
text = "Magnet"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MagnetBox" type="CheckBox" parent="RulesContainer/GridContainer"]
visible = false
margin_left = 210.0
margin_top = 210.0
margin_right = 284.0
margin_bottom = 245.0
disabled = true

[node name="ArenaModifiers" type="Label" parent="RulesContainer/GridContainer"]
visible = false
margin_top = 252.0
margin_right = 206.0
margin_bottom = 287.0
custom_fonts/font = SubResource( 5 )
text = "Arena modifiers:"
valign = 1

[node name="ArenaModifiersFiller" type="Label" parent="RulesContainer/GridContainer"]
visible = false
margin_left = 210.0
margin_top = 252.0
margin_right = 284.0
margin_bottom = 287.0
custom_fonts/font = SubResource( 5 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArenaWall" type="Label" parent="RulesContainer/GridContainer"]
visible = false
margin_top = 294.0
margin_right = 206.0
margin_bottom = 329.0
custom_fonts/font = SubResource( 5 )
text = "Goal shield"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArenaWallBox" type="CheckBox" parent="RulesContainer/GridContainer"]
visible = false
margin_left = 210.0
margin_top = 294.0
margin_right = 284.0
margin_bottom = 329.0
disabled = true

[node name="Label" type="Label" parent="RulesContainer"]
margin_top = 207.0
margin_right = 891.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 7 )
text = "Settings are not synchronized with host"

[node name="PositionContainer" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.722
anchor_right = 0.5
anchor_bottom = 0.722
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0

[node name="0" type="Button" parent="PositionContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 60 )
custom_fonts/font = SubResource( 6 )
text = "Open"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Button" parent="PositionContainer"]
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 60 )
custom_fonts/font = SubResource( 6 )
text = "Open"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Button" parent="PositionContainer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 100.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 200, 60 )
custom_fonts/font = SubResource( 6 )
text = "Open"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Button" parent="PositionContainer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 200, 60 )
custom_fonts/font = SubResource( 6 )
text = "Open"

[node name="QuitBtn" type="Control" parent="."]
anchor_left = 0.226
anchor_top = 0.704
anchor_right = 0.226
anchor_bottom = 0.704
margin_top = -40.0
margin_right = 40.0

[node name="QuitButton" type="Button" parent="QuitBtn"]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 8 )
text = "Back"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/ReadyButton" to="." method="_on_ReadyButton_pressed"]
[connection signal="value_changed" from="RulesContainer/GridContainer/WinBox" to="RulesContainer" method="_on_WinBox_value_changed"]
[connection signal="value_changed" from="RulesContainer/GridContainer/StartHpBox" to="RulesContainer" method="_on_StartHpBox_value_changed"]
[connection signal="toggled" from="RulesContainer/GridContainer/EnableAi" to="RulesContainer" method="_on_EnableAi_toggled"]
[connection signal="toggled" from="RulesContainer/GridContainer/ForceBox" to="RulesContainer" method="_on_ForceBox_toggled"]
[connection signal="toggled" from="RulesContainer/GridContainer/MagnetBox" to="RulesContainer" method="_on_MagnetBox_toggled"]
[connection signal="toggled" from="RulesContainer/GridContainer/ArenaWallBox" to="RulesContainer" method="_on_ArenaWallBox_toggled"]
[connection signal="pressed" from="QuitBtn/QuitButton" to="." method="_on_QuitButton_pressed"]
